build basic project structure